# pyschometric-tests-backend

./: .env.sample  .gitignore  Cargo.toml  README.md  Rocket.toml.sample
migrations/2022-07-09-200651_create_users_table/: up.sql
migrations/2022-07-16-205956_create_tests_table/: up.sql
migrations/2022-07-23-181444_create_questions_table/: up.sql
src/: auth.rs  main.rs  schema.rs  utils.rs
src/auth/: constants.rs  models.rs  oauth.rs  routes.rs  utils.rs
src/psych_tests/: models.rs  routes.rs  utils.rs
